--- a/app/src/main/res/menu/app_menu.xml
+++ b/app/src/main/res/menu/app_menu.xml
@@ -20,32 +20,32 @@
         <menu
                 android:id="@+id/drawType_menuElem">
             <item android:id="@+id/drawType_fingerPath"
-                  android:title="None"
+                  android:title="Ołówek"
                   android:icon="@drawable/icons8_edit_24"
                   android:orderInCategory="100"
                   app:showAsAction="never"/>
             <item android:id="@+id/drawType_line"
-                  android:title="None"
+                  android:title="Linia"
                   android:icon="@drawable/icons8_line_24"
                   android:orderInCategory="100"
                   app:showAsAction="never"/>
             <item android:id="@+id/drawType_emptyCircle"
-                  android:title="None"
+                  android:title="Pusty Okrąg"
                   android:icon="@drawable/icons8_circle_24"
                   android:orderInCategory="100"
                   app:showAsAction="never"/>
             <item android:id="@+id/drawType_filledCircle"
-                  android:title="None"
+                  android:title="Wypełniony Okrąg"
                   android:icon="@drawable/icons8_filled_circle_24"
                   android:orderInCategory="100"
                   app:showAsAction="never"/>
             <item android:id="@+id/drawType_emptyRect"
-                  android:title="None"
+                  android:title="Pusty Prostokąt"
                   android:icon="@drawable/icons8_rectangular_24"
                   android:orderInCategory="100"
                   app:showAsAction="never"/>
             <item android:id="@+id/drawType_filedRect"
-                  android:title="None"
+                  android:title="Wypełiony Prostokąt"
                   android:icon="@drawable/icons8_filled_rectangular_24"
                   android:orderInCategory="100"
                   app:showAsAction="never"/>
