--- a/app/src/main/res/layout/color_dialog.xml
+++ b/app/src/main/res/layout/color_dialog.xml
@@ -5,15 +5,104 @@
         xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
         android:layout_height="match_parent" android:orientation="vertical">
 
-    <com.skydoves.colorpickerpreference.ColorPickerView
-            android:id="@+id/colorPickerView_pallet"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            app:palette="@drawable/palette"
-            app:selector="@drawable/wheel" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent">
-    </com.skydoves.colorpickerpreference.ColorPickerView>
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:gravity="center">
+            <com.skydoves.colorpickerpreference.ColorPickerView
+                    android:id="@+id/colorPickerView_pallet"
+                    android:layout_width="221dp"
+                    android:layout_height="match_parent"
+                    app:palette="@drawable/palette"
+                    app:selector="@drawable/wheel" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent">
+            </com.skydoves.colorpickerpreference.ColorPickerView>
+            <LinearLayout
+                    android:id="@+id/colorSet1"
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                <View
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_weight="1" android:layout_margin="5dp"
+                        android:background="@android:color/black"/>
+                <View
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@android:color/white"
+                        android:layout_weight="1" android:layout_margin="5dp"
+                />
+                <View
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@android:color/holo_blue_dark"
+                        android:layout_weight="1" android:layout_margin="5dp"
+                        android:backgroundTintMode="src_in"/>
+                <View
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@android:color/holo_blue_light"
+
+                        android:layout_weight="1" android:layout_margin="5dp"/>
+                <View
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@android:color/holo_red_dark"
+                        android:layout_weight="1" android:layout_margin="5dp"/>
+                <View
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@android:color/darker_gray"
+                        android:layout_weight="1" android:layout_margin="5dp"/>
+
+
+            </LinearLayout>
+            <LinearLayout
+                    android:id="@+id/colorSet2"
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                <View
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@android:color/holo_green_light"
+                        android:layout_weight="1" android:layout_margin="5dp"/>
+                <View
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@android:color/holo_green_dark"
+                        android:layout_weight="1" android:layout_margin="5dp"/>
+                <View
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@android:color/holo_orange_dark"
+                        android:layout_weight="1" android:layout_margin="5dp"/>
+                <View
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@android:color/holo_orange_light"
+                        android:layout_weight="1" android:layout_margin="5dp"/>
+                <View
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@android:color/holo_purple"
+                        android:layout_weight="1" android:layout_margin="5dp"/>
+                <View
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@android:color/holo_red_light"
+                        android:layout_weight="1" android:layout_margin="5dp"/>
+
+
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
     <ImageView
             android:layout_width="match_parent"
             android:layout_height="30dp" app:srcCompat="@color/colorAccent"
