--- a/app/src/main/res/layout-land/color_dialog.xml
+++ b/app/src/main/res/layout-land/color_dialog.xml
@@ -13,21 +13,32 @@
                 android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
-            <com.skydoves.colorpickerpreference.ColorPickerView
-                    android:id="@+id/colorPickerView_pallet"
-                    android:layout_width="299dp"
-                    android:layout_height="228dp"
-                    app:palette="@drawable/palette"
-                    app:selector="@drawable/wheel" android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent">
-            </com.skydoves.colorpickerpreference.ColorPickerView>
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" android:layout_weight="1">
+                <com.skydoves.colorpickerpreference.ColorPickerView
+                        android:id="@+id/colorPickerView_pallet"
+                        android:layout_width="265dp"
+                        android:layout_height="196dp"
+                        app:palette="@drawable/palette"
+                        app:selector="@drawable/wheel" android:layout_marginEnd="8dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent">
+                </com.skydoves.colorpickerpreference.ColorPickerView>
+                <com.example.patryk.mobilepaint.AlfeGradientSeekBar
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" android:id="@+id/alfeGradientSeekBar"
+                        android:layout_weight="1" android:padding="0dp" android:paddingBottom="0dp"
+                        android:paddingEnd="10dp" android:paddingLeft="5dp" android:paddingRight="5dp"
+                        android:paddingStart="10dp" android:paddingTop="0dp"/>
+            </LinearLayout>
             <ImageView
                     android:layout_width="30dp"
-                    android:layout_height="match_parent" app:srcCompat="@color/colorAccent"
+                    android:layout_height="match_parent" app:srcCompat="@drawable/pobrane"
                     tools:layout_editor_absoluteY="346dp" tools:layout_editor_absoluteX="148dp"
-                    android:id="@+id/imageView_color" android:layout_margin="5dp"/>
+                    android:id="@+id/imageView_color" android:layout_margin="5dp" android:scaleType="centerCrop"/>
             <LinearLayout
                     android:id="@+id/colorSet1"
                     android:orientation="vertical"
